# src/Scooter/src/Handler/ScooterNearbyHandler.php
@@ -10,6 +10,7 @@ use Psr\Http\Message\ResponseInterface;
 use Psr\Http\Message\ServerRequestInterface;
 use Psr\Http\Server\RequestHandlerInterface;
 use Scooter\Entities\ScooterRepository;
+use Throwable;
 
 class ScooterNearbyHandler implements RequestHandlerInterface
 {
@@ -18,15 +19,41 @@ class ScooterNearbyHandler implements RequestHandlerInterface
     ) {
     }
 
-    #[OA\Get(path: '/api/scooter/nearby')]
-    #[OA\Response(response: '200', description: 'List scooters nearby you')]
+    #[OA\Get(
+        path: '/api/scooter/nearby',
+        description: 'Find scooters that are nearby a particular geographical position (up to 1 km)',
+        parameters: [
+            new OA\Parameter(name: 'latitude', required: true),
+            new OA\Parameter(name: 'longitude', required: true),
+        ],
+        responses: [
+            new OA\Response(response: '200', description: 'List of scooters nearby.', content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(property: 'result', type: 'array', items: new OA\Items(
+                        properties: [
+                            new OA\Property(property: 'scooter_id', type: 'int'),
+                            new OA\Property(property: 'distance', description: 'Distance in KM', type: 'float'),
+                            new OA\Property(property: 'latitude', type: 'float'),
+                            new OA\Property(property: 'longitude', type: 'float'),
+                        ]
+                    )),
+                ]
+            )),
+            new OA\Response(response: '400', description: 'Request missing parameters'),
+        ],
+    )]
     public function handle(ServerRequestInterface $request): ResponseInterface
     {
-        $parameters = $request->getQueryParams();
-        $scooters   = $this->scooterRepository->getNearbyScooters(
-            (float) $parameters['latitude'],
-            (float) $parameters['longitude']
-        );
+        try {
+            $scooters = $this->scooterRepository->getNearbyScootersFromRequest($request);
+        } catch (Throwable $exception) {
+            return new JsonResponse(
+                [
+                    'error' => $exception->getMessage(),
+                ],
+                400
+            );
+        }
 
         return new JsonResponse(['result' => $scooters]);
     }
